# Lab_8

./: README.md
src/Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur3e_bringup.launch  ur_common.launch
src/camera_calib_pkg/: CMakeLists.txt  package.xml
src/camera_calib_pkg/calibration/camera/: logitech_extrinsics.json  logitech_webcam.yaml  logitech_webcam_640x480.yaml
src/camera_calib_pkg/include/: aruco_tf.hpp
src/camera_calib_pkg/launch/: aruco_tf.launch  extrinsic_calibration.launch
src/camera_calib_pkg/src/: aruco_tf.cpp
src/fmauch_universal_robot/ur3e_moveit_config/config/: ros_controllers.yaml  ur3e.srdf
src/fmauch_universal_robot/ur3e_moveit_config/launch/: demo.launch  move_group.launch  planning_context.launch  trajectory_execution.launch.xml  ur3e_moveit_controller_manager.launch.xml
src/fmauch_universal_robot/ur_description/launch/: load_ur.launch  load_ur3e.launch
src/fmauch_universal_robot/ur_description/urdf/: ur.xacro  ur3e.xacro
src/fmauch_universal_robot/ur_description/urdf/inc/: ur3e_macro.xacro  ur_macro.xacro
src/fmauch_universal_robot/ur_gazebo/config/: ur3e_controllers.yaml
src/fmauch_universal_robot/ur_gazebo/launch/: ur3e_bringup.launch
src/fmauch_universal_robot/ur_gazebo/launch/inc/: load_ur.launch.xml  load_ur3e.launch.xml  ur_control.launch.xml
src/fmauch_universal_robot/ur_gazebo/urdf/: ur.xacro  ur_macro.xacro
src/moveit_wrapper/: CMakeLists.txt  package.xml
src/moveit_wrapper/include/moveit_wrapper/: arm_controller.hpp  moveit_imports.hpp  moveit_planning_options.hpp
src/moveit_wrapper/src/: arm_controller.cpp
src/robotiq/robotiq_control/config/: gripper_hande_controller.yaml
src/robotiq/robotiq_description/urdf/: robotiq_hande_gripper.transmission.xacro
src/ur3e_moveit_mrc/: CMakeLists.txt  README.md  package.xml
src/ur3e_moveit_mrc/launch/: move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  trajectory_execution.launch.xml  ur3e_moveit.launch  ur3e_moveit_controller_manager.launch.xml
src/ur3e_setup/: CMakeLists.txt  README.md  package.xml
src/ur3e_setup/config/: ur3e_rviz_config.rviz
src/ur3e_setup/include/: scene_setup.hpp
src/ur3e_setup/launch/: setup.launch  ur3e_bringup_mrc.launch  ur3e_gazebo.launch  ur3e_moveit.launch  ur3e_rviz.launch
src/ur3e_setup/launch/inc/: load_ur3e_mrc.launch.xml
src/ur3e_setup/src/: scene_setup.cpp
src/ur3e_setup/urdf/: ur_mrc_gazebo.xacro  ur_mrc_real.xacro
