<package>

  <name>ur3e_moveit_mrc</name>
  <version>0.3.0</version>
  <description>
     Package to launch moveit for UR3e arms.
  </description>
  <author email="ipenskiy@umd.edu">Ivan Penskiy</author>
  <maintainer email="ipenskiy@umd.edu">Ivan Penskiy</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_setup_assistant</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

</package>